# llm-sql-script-v1

./: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
src/: dataview.py  main.py  workflow.py
src/graph/: plotsandbox.py  scriptgen.py  scriptsandbox.py  state.py  systemprompt.py
tests/: conftest.py  test_dataview.py  test_main.py  test_scriptgen.py  test_scriptsandbox.py  test_workflow.py
