[project]
name = "data-genie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-nvidia-ai-endpoints>=0.3.10",
    "langchain>=0.3.25",
    "langgraph>=0.4.8",
    "pydantic-ai>=0.2.14",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.4.1",
]
